# nexus-agent

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE_BLUEPRINT_v4.0.md  AUDIT_DEADCODE_REPORT.md  AUDIT_REMEDIATION_COMPLETE.md  AUDIT_REPORT_FINAL.md  CODE_OF_CONDUCT.md  COMPETITIVE_ANALYSIS_v2025.md  CONNECTION_RECOVERY_PLAN.md  CONTRIBUTING.md  DIAGNOSTIC_REPORT.md  DIAGNOSTIC_REPORT_FINAL.md  Dockerfile  LICENSE  ODYSSEUS_ARCHITECTURE_ANALYSIS.md  README.md  STABILIZATION_PLAN.md  docker-compose.prod.yml  docker-compose.yml  env.production.template  fix_orchestrator.py  install.sh  launcher.ps1  main.js  package-lock.json  package.json  preload.js  pyproject.toml  requirements.txt  run_cli.py  run_desktop.py  run_web.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
_backup/batch1/: main.py  orchestrator.py  unified_backend.py
_backup/batch4/: main.py
_backup/batch6/: main.py
_backup/evals/: framework.py  regression.py
_backup/memory/: self_editing.py
_backup/observability/: auto_tracer.py
deploy/: nginx.conf
deploy/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  pvc.yaml  service.yaml
desktop/: app.js  bridge.py  index.html  launch.py  main_window.py  manifest.json  worker.py
docs/: INTEGRATION_REPORT_v4.0.md  MIROFISH_INTEGRATION_REPORT.md  QUICKSTART.md  VERIFICATION_CHECKLIST.md  hermes_openclaw_comparison_report.md
examples/: mirofish_demo.py
k8s/: deployment.yaml  secret.yaml
nexusagent/: __init__.py  main.py
scripts/: analyze_deadcode.py  run_mcp_server.py
tests/: conftest.py  test_adapter.py  test_anti_compression.py  test_anti_laziness_integration.py  test_backup.py  test_batch1_integration.py  test_batch2_integration.py  test_batch3_integration.py  test_batch4_integration.py  test_batch5_integration.py  test_batch6_integration.py  test_benchmark.py  test_bootstrap.py  test_chunked_reader.py  test_completeness.py  test_core.py  test_core_registry.py  test_crew.py  test_cross_platform.py  test_deliberation_e2e.py  test_diagnostics_integration.py  test_document_tool.py  test_dream_engine_e2e.py  test_e2e_v4.py  test_error_recovery.py  test_evals.py  test_evolution_ab_test.py  test_evolution_config.py  test_evolution_e2e.py  test_evolution_engine.py  test_evolution_history.py  test_evolution_hitl.py  test_evolution_strategies.py  test_health_check.py  test_health_integration.py  test_hitl.py  test_hybrid_memory.py  test_idle_detector.py  test_integration.py  test_integration_e2e.py  (+32 more)
web_ui/: app.html  app.js  chat.html  index.html  styles.css  sw.js
(+153 files in other folders)
